Overflow of logos of action items in Lexical Playground. #4095 fixed

--- a/packages/lexical-playground/src/index.css
+++ b/packages/lexical-playground/src/index.css
@@ -1152,7 +1152,7 @@ i.prettier-error {
 }
 
 .actions {
-  position: absolute;
+  position: inherit;
   text-align: right;
   margin: 10px;
   bottom: 0;
